[package]
name = "poetry_no_cap_cli"
version = "0.0.1"
edition = "2021"
authors = ["Paul Sanders <psanders1@gmail.com>"]
documentation = "https://github.com/sanders41/poetry-no-cap"
homepage = "https://github.com/sanders41/poetry-no-cap"
repository = "https://github.com/sanders41/poetry-no-cap"
readme = "README.md"
license = "MIT"

[package.metadata.maturin]
name = "poetry-no-cap"

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.6", features = ["suggestions", "derive"] }
