[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "poetry-no-cap"
requires-python = "^3.7"
authors = [{name = "Paul Sanders", email = "psanders1@gmail.com"}]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Rust",
]

[project.urls]
Homepage = 'https://github.com/sanders41/poetry-no-cap'
Funding = 'https://github.com/sponsors/sanders41'
Repository = 'https://github.com/sanders41/poetry-no-cap'

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | \venv
  | _build
  | buck-out
  | build
  | dist
  | setup.py
)/
'''

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["camel_converter", "tests"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=poetry_no_cap --cov-report term-missing"

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.ruff]
select=["E", "F", "T201", "T203"]
ignore=["E501"]

